# gbbCalibPackage

./: .gitignore  README.md  gbb_plot.py  gbb_plot_root.py  histMacker.json  histMacker.py  hist_maker.json  hist_maker.py  hist_plotter.py  plot_utils.py  pyproject.toml
histogram/: hist_maker.json  hist_maker.py  hist_maker_sd0.py  hist_plotter.py  hist_plotter_sd0.py  hist_sort.py  histogram.py
run/sorted_hist/comb/mjmeanSd0/: mjpt_g200l300_nmjpt_g100l200_2TAG_BL_mjmeanSd0.pickle  mjpt_g200l300_nmjpt_g100l200_2TAG_CC_mjmeanSd0.pickle  mjpt_g200l300_nmjpt_g100l200_2TAG_CL_mjmeanSd0.pickle  mjpt_g200l300_nmjpt_g100l200_2TAG_LL_mjmeanSd0.pickle  mjpt_g200l300_nmjpt_g100l200_NOT2TAG_BL_mjmeanSd0.pickle  mjpt_g200l300_nmjpt_g100l200_NOT2TAG_CL_mjmeanSd0.pickle  mjpt_g200l300_nmjpt_g200_2TAG_BB_mjmeanSd0.pickle  mjpt_g200l300_nmjpt_g200_2TAG_CC_mjmeanSd0.pickle  mjpt_g200l300_nmjpt_g200_2TAG_CL_mjmeanSd0.pickle  mjpt_g200l300_nmjpt_g200_2TAG_LL_mjmeanSd0.pickle  mjpt_g200l300_nmjpt_g200_NOT2TAG_BB_mjmeanSd0.pickle  mjpt_g200l300_nmjpt_g200_NOT2TAG_CC_mjmeanSd0.pickle  mjpt_g200l300_nmjpt_g200_NOT2TAG_CL_mjmeanSd0.pickle  mjpt_g200l300_nmjpt_g200_NOT2TAG_LL_mjmeanSd0.pickle  mjpt_g200l300_nmjpt_l100_2TAG_BB_mjmeanSd0.pickle  mjpt_g200l300_nmjpt_l100_NOT2TAG_BL_mjmeanSd0.pickle  mjpt_g200l300_nmjpt_l100_NOT2TAG_CL_mjmeanSd0.pickle  mjpt_g300_nmjpt_g100l200_2TAG_BB_mjmeanSd0.pickle  mjpt_g300_nmjpt_g100l200_2TAG_BL_mjmeanSd0.pickle  mjpt_g300_nmjpt_g100l200_2TAG_LL_mjmeanSd0.pickle  mjpt_g300_nmjpt_g100l200_NOT2TAG_BB_mjmeanSd0.pickle  (+20 more)
(+319 files in other folders)
