[tool.poetry]
name = "gbb_calib"
version = "0.1.0"
description = "gbb calibration package"
authors = ["Helen Chen <14littleraindrop@gmail.com>"]

[tool.poetry.dependencies]
python = "^2.7"
numpy = "1.16.6"
matplotlib = "2.2"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
